<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:baselineAligned="false"
    android:orientation="horizontal" 
    android:gravity="center">
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#999999"
            android:gravity="center"
            android:text="@string/barreira_label"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/hour1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/empty"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#999999"
            android:gravity="center"
            android:text="@string/pti_label"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/hour2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/empty"
            android:textColor="#000000" />
    </LinearLayout>
    <ImageButton
        android:id="@+id/update_btn"
        style="@style/ButtonAppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/update_btn"
        android:src="@drawable/ic_btn_refresh" />
</LinearLayout>