<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/update_btn"
        style="@style/ButtonAppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/update_btn"
        android:src="@drawable/ic_btn_refresh" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/update_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="3" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#dddddd"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#999999"
                    android:gravity="center"
                    android:text="@string/barreira_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <org.itai.onibuspti.view.CustomViewPager
                    android:id="@+id/pager1"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/next_bus_panel" />
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#dddddd"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#999999"
                    android:gravity="center"
                    android:text="@string/pti_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <org.itai.onibuspti.view.CustomViewPager
                    android:id="@+id/pager2"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/next_bus_panel" />
            </LinearLayout>
            
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:adjustViewBounds="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/logos" />
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>